--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -658,15 +658,17 @@ jobs:
       shell: powershell
     - name: Run Powershell Tab Completion Tests
       run: |
-        just test ./tests/verify_environment.py
+        just test ./tests/verify_environment.py; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
         .venv\Scripts\activate.ps1; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_powershell"; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-        just test-powershell
-        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+        just test-powershell; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: powershell
     - name: Test CMD shell failure
       run: |
         call .venv\Scripts\activate
-        pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
+        pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure || exit 1
+        Rename-Item -Path "C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe" -NewName "powershell_disabled.exe" -Force
+        Rename-Item -Path "C:\Program Files\PowerShell\7\pwsh.exe" -NewName "pwsh_disabled.exe" -Force
+        pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure || exit 1
       shell: cmd
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -729,9 +731,8 @@ jobs:
       run: |
         just test ./tests/verify_environment.py
         .venv\Scripts\activate.ps1; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_pwsh"; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-        just test-pwsh
-        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-      shell: powershell
+        just test-pwsh; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+      shell: pwsh
     - name: Test CMD shell failure
       run: |
         call .venv\Scripts\activate
