--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -11,10 +11,9 @@ build:
   tools:
     python: "3.12"
   jobs:
-    post_create_environment:
-      - pip install poetry
     post_install:
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH python -m poetry install -E rich --with docs
+      - pip install uv
+      - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs --link-mode=copy
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
