--- a/pyproject.toml
+++ b/pyproject.toml
@@ -196,7 +196,7 @@ docs = [
     "sphinx>=7.4.7",
     "sphinx-autobuild>=2024.10.3",
     "sphinx-tabs>=3.4.7",
-    "sphinxcontrib-typer>=0.5.1",
+    "sphinxcontrib-typer[png]>=0.5.1",
 ]
 psycopg3 = [
     "psycopg>=3.1.8",
