--- a/.github/workflows/update_coc.yml
+++ b/.github/workflows/update_coc.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Fetch CODE_OF_CONDUCT.md from django-commons
         run: |
