--- a/.github/workflows/zizmor.yml
+++ b/.github/workflows/zizmor.yml
@@ -1,4 +1,4 @@
-name: Zizmor GitHub Actions Security Analysis
+name: Zizmor
 
 on:
   push:
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   zizmor-analysis:
-    name: Zizmor Analysis
+    name: Run Zizmor
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -53,15 +53,3 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
-
-      - name: Post SARIF findings in the pull request
-        if: github.event_name == 'pull_request'
-        uses: sett-and-hive/sarif-to-comment-action@v2.0.1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          branch: ${{ github.head_ref }}
-          pr-number: ${{ github.event.number }}
-          sarif-file: results.sarif
-          title: Zizmor Findings
-          dry-run: false
