fix shell tests, bump django bleeding edge to 5.2rc1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ">=3.11"  # for tomlib
+        python-version: "3.12"  # for tomlib
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
