try fix fake passes on windows in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -682,9 +682,13 @@ jobs:
       shell: powershell
     - name: Run Powershell Tab Completion Tests
       run: |
-        just test ./tests/verify_environment.py; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-        .venv\Scripts\activate.ps1; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_powershell"; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-        just test-powershell; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+        just test ./tests/verify_environment.py
+        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+        . .venv\Scripts\activate.ps1
+        cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_powershell"
+        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+        just test-powershell
+        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: powershell
     - name: Test CMD shell failure
       run: |
@@ -753,8 +757,12 @@ jobs:
     - name: Run Powershell Tab Completion Tests
       run: |
         just test ./tests/verify_environment.py
-        .venv\Scripts\activate.ps1; cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_pwsh"; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-        just test-pwsh; if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+        . .venv\Scripts\activate.ps1
+        cmd /c "pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_pwsh"
+        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
+        just test-pwsh
+        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: pwsh
     - name: Test CMD shell failure
       run: |
