--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "django-typer"
 version = "3.1.0"
-requires-python = ">=3.9,<4.0"
+requires-python = "==3.13.2"
 description = "Use Typer to define the CLI for your Django management commands."
 authors = [
   {name = "Brian Kohan", email = "bckohan@gmail.com"},
@@ -17,7 +17,7 @@ repository = "https://github.com/django-commons/django-typer"
 homepage = "https://django-typer.readthedocs.io"
 keywords = ["django", "CLI", "management", "Typer", "commands"]
 dependencies = [
-    "Django>=3.2,<6.0",
+    "django~=5.2.0",
     "click>=8.1.8,<8.2",
     # typer's release history is full of breaking changes for minor versions
     # given the reliance on some of its private internals we peg the typer
@@ -25,7 +25,7 @@ dependencies = [
     "typer-slim>=0.14.0,<0.16.0",
     "shellingham>=1.5.4,<2.0",
     # we need this on 3.9 for ParamSpec
-    "typing-extensions>=3.7.4.3; python_version < '3.10'"
+    "typing-extensions>=3.7.4.3; python_version < '3.10'",
 ]
 classifiers = [
     "Environment :: Console",
