--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,10 @@ permissions:
 
 on:
   push:
-  #  branches: main
+    tags-ignore:
+      - '*'
+    branches:
+      - '*'
   pull_request:
   workflow_call:
   workflow_dispatch:
