--- a/pyproject.toml
+++ b/pyproject.toml
@@ -200,6 +200,9 @@ docs = [
     "sphinxcontrib-django>=2.5",
     "sphinxcontrib-typer[png]>=0.5.1",
 ]
+profiling = [
+    "tuna>=0.5.11",
+]
 psycopg3 = [
     "psycopg>=3.1.8",
 ]
