--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -10,6 +10,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  apt_packages:
+    - libcairo2
+    - libpango-1.0-0
+    - libgdk-pixbuf2.0-0
+    - libffi-dev
   jobs:
     post_install:
       - pip install uv
