--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -10,18 +10,7 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-  apt_packages:
-    - libcairo2
-    - libpango-1.0-0
-    - libgdk-pixbuf2.0-0
-    - libffi-dev
-    - chromium-browser
-    - libasound2
   jobs:
-    post_create_environment:
-      - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-      - dpkg -x google-chrome-stable_current_amd64.deb $HOME/chrome
-      - touch $HOME/.rtd.build
     post_install:
       - pip install uv
       - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs --link-mode=copy
@@ -31,5 +20,6 @@ sphinx:
    configuration: doc/source/conf.py
    
 # Optionally build your docs in additional formats such as PDF and ePub
-formats:
-  - pdf
+# remove pdf for now - sphinx tabs does not support
+# formats:
+#   - pdf
