--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,7 +190,7 @@ dev = [
     "pytest-env>=1.1.5",
     "pytest-timeout>=2.3.1",
     "ruff>=0.9.10",
-    "pywinpty>=2.0.14; sys_platform == 'win32'",
+    "pywinpty>=2.0.14,<3.0.0; sys_platform == 'win32'",
     "tomlkit>=0.13.2",
 ]
 docs = [
