test against django 6.0 alpha 1 - add classifier and bump version

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
           - '5.0' # April 2025
           - '5.1' # December 2025
           - '5.2' # April 2028
+          - '6.0a1' # prerelease
         exclude:
           - python-version: '3.9'
             django-version: '5.0'
@@ -65,6 +66,17 @@ jobs:
             django-version: '5.0'
           - python-version: '3.14'
             django-version: '5.1'
+
+          - python-version: '3.9'
+            django-version: '6.0a1'
+          - python-version: '3.10'
+            django-version: '6.0a1'
+          - python-version: '3.11'
+            django-version: '6.0a1'
+          - python-version: '3.12'
+            django-version: '6.0a1'
+          - python-version: '3.13'
+            django-version: '6.0a1'
     env:
       COVERAGE_FILE: py${{ matrix.python-version }}-linux-dj${{ matrix.django-version }}.coverage
       TEST_PYTHON_VERSION: ${{ matrix.python-version }}
@@ -96,8 +108,14 @@ jobs:
     - name: Setup Just
       uses: extractions/setup-just@v3
     - name: Install Dependencies
+      shell: bash
       run: |
-        just test-lock "Django~=${{ matrix.django-version }}.0"
+        just setup ${{ steps.sp.outputs.python-path }}
+        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
+          just test-lock Django==${{ matrix.django-version }}
+        else
+          just test-lock Django~=${{ matrix.django-version }}.0
+        fi
     - name: Run Unit Tests
       run: |
         just test ./tests/verify_environment.py
