--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "django-typer"
-version = "3.3.1"
+version = "3.3.2"
 requires-python = ">=3.9,<4.0"
 description = "Use Typer to define the CLI for your Django management commands."
 authors = [
@@ -17,7 +17,7 @@ repository = "https://github.com/django-commons/django-typer"
 homepage = "https://django-typer.readthedocs.io"
 keywords = ["django", "CLI", "management", "Typer", "commands"]
 dependencies = [
-    "Django>=3.2,<6.0",
+    "Django>=3.2,<6.1",
     "click>=8.1.8,<8.4",
     # typer's release history is full of breaking changes for minor versions
     # given the reliance on some of its private internals we peg the typer
@@ -40,6 +40,7 @@ classifiers = [
     "Framework :: Django :: 5.0",
     "Framework :: Django :: 5.1",
     "Framework :: Django :: 5.2",
+    "Framework :: Django :: 6.0",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
