--- a/pyproject.toml
+++ b/pyproject.toml
@@ -203,8 +203,7 @@ docs = [
     "sphinx-autobuild>=2024.10.3",
     "sphinx-tabs>=3.4.7",
     "sphinxcontrib-django>=2.5",
-    "sphinxcontrib-typer[png]>=0.5.1",
-    "cmarkgfm==2024.11.20" # TODO: remove after https://github.com/theacodes/cmarkgfm/issues/83
+    "sphinxcontrib-typer[png]>=0.5.1"
 ]
 profiling = [
     "tuna>=0.5.11",
